transfered images to public/images

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,11 @@
 	@for(element <- list) {
 		<div class="row">
 		@for(cell <- element){
-			<span class=cell>@cell</span>
+			<span class=cell>
+			@if(cell equals "  "){
+				<image src="/../images/greenField.png" />
+			}
+			</span>
 		}
 		</div>
 	}
