--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,14 +6,9 @@
     <title>@title</title>
     <link rel='shortcut icon' type='image/png' href='@routes.Assets.at("images/favicon.png")'>
     <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))'>
+    <link rel='stylesheet' href='@routes.Assets.at("stylesheets/cssstyle.css")'>
     <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
-    <style>
-    body {
-        margin-top: 50px;
-    }
-    
-    .cell {margin:20px;padding:20px}
-    </style>
+
 </head>
 <body>
     <div class="navbar navbar-fixed-top">
