--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,6 +8,15 @@
     <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))'>
     <link rel='stylesheet' href='@routes.Assets.at("stylesheets/cssstyle.css")'>
     <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
+	
+	<style>
+		.cell {
+			width: 50px;
+			height: 50px;
+			background-color: green;
+			border: 1px solid black;
+		}
+	</style>
 
 </head>
 <body>
