--- a/public/stylesheets/cssstyle.css
+++ b/public/stylesheets/cssstyle.css
@@ -1,8 +1,10 @@
-@CHARSET "ISO-8859-1";
+/* @CHARSET "ISO-8859-1"; */
 
 .cell {
 	width: 50px;
 	height: 50px;
 	background-color: green;
 	border: 1px solid black;
+	display: inline-block;
 }
+
