--- a/public/stylesheets/cssstyle.css
+++ b/public/stylesheets/cssstyle.css
@@ -1,10 +1,23 @@
 /* @CHARSET "ISO-8859-1"; */
 
+body {
+    padding-top: 70px;
+}
+
 .cell {
 	width: 50px;
 	height: 50px;
 	background-color: green;
 	border: 1px solid black;
 	display: inline-block;
+	float: left;
+}
+
+.row {
+	clear: both; /*lonks und recht von mir darf nichts floaten*/
+}
+
+.field {
+/* 	top: 100px; */
 }
 
