--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,6 +9,8 @@
     <link rel='stylesheet' type="text/css" href='@routes.Assets.at("stylesheets/cssstyle.css")'>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
+    <script type="text/javascript" src='@routes.Assets.at("javascripts/functions.js")'></script>
+    <script type="text/javascript" charset="utf-8" src="@routes.Application.wsJs()"></script>
 </head>
 <body>
 
@@ -44,7 +46,13 @@
     </nav>
 
     <div class="container-fluid myContent">
-        @content
+    	<div id="dynamicallyLoadableContent">@content</div>
+    	<div>
+	        <h1>Simple chat</h1>
+	        
+	        <input type="text" id="socket-input" style=" color:black"/>
+	        <div id="socket-messages" style=""></div>
+    	</div>
     </div>
 
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
