changed to https - heroku

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,7 +5,7 @@
 <head>
     <title>@title</title>
     <link rel='shortcut icon' type='image/png' href='@routes.Assets.at("images/favicon.png")'>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel='stylesheet' type="text/css" href='@routes.Assets.at("stylesheets/cssstyle.css")'>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
