--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -18,9 +18,9 @@
 	<section class="col-xs-12 col-md-6 col-lg-3 toCenter">
 		<div class="textfield">
 			@if(message==null){
-				<p>Next move please!</p>
+				<p>Awaiting next move!</p>
 			} else {
-				@message
+				<p>@message</p>
 			}
 		</div>
 		<br>
