--- a/public/stylesheets/cssstyle.css
+++ b/public/stylesheets/cssstyle.css
@@ -1,14 +1,13 @@
 /* @CHARSET "ISO-8859-1"; */
 
 		body {
-			background-color: lightslategray;
+			background-image: url("../images/chinamountain.jpg");
 		}
 		
 		.xcell {
 			width: 11.1%;
 			height: 9.1%;
-			background-color: lightyellow;
-			border: 2px solid black;
+			border: 1px solid black;
 			display: inline-block;
 			float: left;
 		}
@@ -19,14 +18,18 @@
 		}
 		
 		.textfield {
+			color: #4C1A1A;
+			font-weight: bold;
 			height: auto;
-			background-color: lightseagreen;
-			border: 5px solid black;
+			background-color: rgba(210, 250, 247, 0.6);
+			font-size: 1.2em;
+			font-family: Microsoft JhengHei;
+			border-radius: 25px;
 		}
 		
 		.textfieldWithoutBackground {
 			height: auto;
-#			border: 5px solid black;
+			border: 5px solid black;
 		}
 		
 		input.nextMove {
