changed some design

--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -1,4 +1,4 @@
-@main("Welcome to Xiangqi") {
+@main("Xiangqi - Chinese Chess") {
 
 	<h1>Welcome to Xiangqi</h1>
 	<button class="btn" type="button" id="startButton">Play!</button>
