--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,14 +1,10 @@
 @(list: ArrayList[ArrayList[String]])(message: String)(turn: Int)(playerID: Int)
 
-@main("Welcome to Xiangqi") {
+@main("Xiangqi - Chinese Chess") {
 	<div class="col-xs-12 col-md-6 board">
 	@for((element, rID) <- list.zipWithIndex) {
 		@if(rID == 5){
-			<div>
-				@for(i<-1 to 9){
-					<image class="xcell river" src="@routes.Assets.at("images/opacity.png")">
-				}
-			</div>
+			<img class="clearfix riverpic" src="@routes.Assets.at("/images/river.png")">
 		}
 		<div class="clearfix" id="boardRow@rID">
 		@for((cell, cID) <- element.zipWithIndex){
@@ -34,20 +30,21 @@
 		<div class="textfield container-fluid">
 			<p>Your next move:</p><br>
 			
-			<div class="col-xs-12 col-lg-5">
+			<div class="col-xs-5 col-lg-5">
 				Figure:<br>
 				<p>x: <input class="nextMove InputFigurex" type="text"></p>
 				<p>y: <input class="nextMove InputFigurey" type="text"></p>
 			</div>
 			
-			<div class="col-xs-12 col-lg-5">
+			<div class="col-xs-5 col-lg-5">
 				Dest:<br>
 				<p>x: <input class="nextMove InputDestinationx" type="text"></p>
 				<p>y: <input class="nextMove InputDestinationy" type="text"></p>
 			</div>
 		
-			<button class="nextMove col-xs-12 col-lg-2 btn" type="button">Go!</button>
+			<button class="btn nextMove col-xs-2 col-lg-2" type="button">Go!</button>
 		</div>
+		<br>
 <!-- 	</section> -->
 	
 <!-- 	<section class="col-xs-12 col-md-6 col-lg-6"> -->
@@ -62,7 +59,7 @@
 				}
 			</div>
 			<div class="col-xs-6 ">
-				<p>Next player:</p>
+				<p>Current player:</p>
 				@if(turn==1){
 						<div class="redcircle"></div>
 				} else {
@@ -70,11 +67,14 @@
 				}
 			</div>
 		</div>
+		<br>
 		
-		<div>
-	        <h1 color="#4C1A1A">Chat</h1>
-	        <input type="text" id="socket-input" style=" color:black"/>
-	        <div id="socket-messages" class="textfield" style=""></div>
+		<div class="textfield container-fluid">
+			<div>
+		        <h1>Chat</h1>
+		        <input type="text" id="socket-input">
+		        <div id="socket-messages" class="textfield" style=""></div>
+	    	</div>
     	</div>
 	</section>
 	
