--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -4,5 +4,6 @@
 	<button class="btn" type="button" id="startButton">Play!</button>
 	<script>$("#startButton").click(function(){
 		$("#dynamicallyLoadableContent").load("playGame" + " #dynamicallyLoadableContent");
+		$('#tohide').show();
 	})</script>
 }
