--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,8 +8,7 @@
 	href='@routes.Assets.at("images/favicon.png")'>
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel='stylesheet' type="text/css"
-	href='@routes.Assets.at("stylesheets/cssstyle.css")'>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--     <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script> -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -19,6 +18,8 @@
 	src="@routes.Application.wsJs()"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<link rel='stylesheet' type="text/css"
+href='@routes.Assets.at("stylesheets/cssstyle.css")'>
 </head>
 <body>
 
@@ -60,20 +61,21 @@
 		</div>
 	</nav>
 
-	<div class="row">
-		<div class="col-xs-12 col-md-12 col-lg-8 container-fluid myContent">
-			<div id="dynamicallyLoadableContent">@content</div>
-		</div>
-
-		<div class="col-xs-12 col-md-6 col-lg-4 textfield container-fluid"
-			id="tohide">
-			<div>
-				<h1>Chat</h1>
-				<input type="text" id="socket-input">
-				<div id="socket-messages" class="textfield" style=""></div>
-			</div>
-		</div>
+	<div class="container-fluid myContent">
+		<div id="dynamicallyLoadableContent">@content</div>
 	</div>
+
+	<div class="container-fluid"
+		id="tohide">
+		<div class="col-xs-0 col-sm-4 col-lg-3"></div>
+		<div class="textfield col-xs-12 col-sm-4 col-lg-6">
+			<h1>Chat</h1>
+			<input type="text" id="socket-input" style="width: 100%">
+			<div id="socket-messages" style="overflow: auto; height:100px;"></div>
+		</div>
+		<div class="col-xs-0 col-sm-4 col-lg-3"></div>
+	</div>
+		
 
 	<!-- Modal -->
 	<div class="modal fade" id="advisorModal" tabindex="-1" role="dialog"
