--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -30,14 +30,14 @@
 		<div class="textfield container-fluid">
 			<p>Your next move:</p><br>
 			
-			<div class="col-xs-5 col-lg-5">
-				Figure:<br>
+			<div class="col-xs-6">
+				Piece:<br>
 				<p>x: <input class="nextMove InputFigurex" type="text"></p>
 				<p>y: <input class="nextMove InputFigurey" type="text"></p>
 			</div>
 			
-			<div class="col-xs-5 col-lg-5">
-				Dest:<br>
+			<div class="col-xs-6">
+				Target:<br>
 				<p>x: <input class="nextMove InputDestinationx" type="text"></p>
 				<p>y: <input class="nextMove InputDestinationy" type="text"></p>
 			</div>
